[gd_scene load_steps=11 format=3 uid="uid://cgj2eaw3tqc7f"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_wafra"]
[ext_resource type="Texture2D" uid="uid://bu4q50ks347k4" path="res://assets/UI/0f63801b54e9393c8ebec2708e6d06e1.jpg" id="2_7tpo5"]
[ext_resource type="FontFile" uid="uid://4rp8ixlmsfu4" path="res://assets/fonts/PixelTandysoft-0rJG.ttf" id="3_17xf0"]
[ext_resource type="Texture2D" uid="uid://dm5lhb6s63qoa" path="res://assets/characters/cover_art_2d.png" id="3_mah6a"]
[ext_resource type="Shader" path="res://shaders/chromatic_aberration.gdshader" id="4_ijpcr"]
[ext_resource type="AudioStream" uid="uid://c63uklb30k8f1" path="res://assets/sounds/music/One Man Symphony - Wreckage (Free) - 07 Wreckage (Area Investigation 03) - Loops.mp3" id="5_71haw"]
[ext_resource type="FontFile" uid="uid://eonv58ncp6tt" path="res://assets/fonts/retro-pixel-arcade.ttf" id="6_cnlcs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wlrm4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qkeft"]
shader = ExtResource("4_ijpcr")
shader_parameter/r_displacement = Vector2(1, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aeew1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wafra")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.0313726, 0.0313726, 0.0313726, 1)
material = SubResource("ShaderMaterial_wlrm4")
position = Vector2(321, 183)
scale = Vector2(1.07742, 0.855914)
texture = ExtResource("2_7tpo5")

[node name="Cover2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(325, 184)
scale = Vector2(0.74, 0.74)
texture = ExtResource("3_mah6a")

[node name="Menu" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_right = -78.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 45

[node name="CRT" type="ColorRect" parent="CanvasLayer/Menu"]
material = SubResource("ShaderMaterial_qkeft")
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="PlayButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 25
text = "Start"
flat = true
alignment = 2

[node name="SettingsButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 25
text = "Settings"
flat = true
alignment = 2

[node name="ExitButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 25
text = "Exit"
flat = true
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 85

[node name="Label" type="Label" parent="CanvasLayer/Menu/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.741176, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_cnlcs")
theme_override_font_sizes/font_size = 30
text = "The Diver"

[node name="Settings" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 45

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 56

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 85

[node name="Label" type="Label" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 15
text = "Audio"

[node name="AudioSlider" type="HSlider" parent="CanvasLayer/Settings/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = -50.0
max_value = 50.0

[node name="SettingsBackButton" type="Button" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_17xf0")
text = "Back"

[node name="Instructions" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = -18.0
offset_right = -79.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Instructions" type="VBoxContainer" parent="CanvasLayer/Instructions"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/Instructions/Instructions"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 30
text = "Contract"

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/Instructions/Instructions"]
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_17xf0")
bbcode_enabled = true
text = "This Agreement is made on this [Date], between [Client Name], hereinafter referred to as \"Client,\" and [Diver's Name], hereinafter referred to as [color=red]\"THe Diver.\"[/color]

The Diver will collect minerals from an underwater cave at [Location].
Diver must fulfill a quota of [specified amount] of minerals per dive.

The Client is not responsible for any injuries or death occurring during the dive.
The Diver undertakes the expedition at their own risk."
fit_content = true
autowrap_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Instructions"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_aeew1")

[node name="StartButton" type="Button" parent="CanvasLayer/Instructions/Panel"]
layout_mode = 2
offset_left = 396.0
offset_top = 323.0
offset_right = 534.0
offset_bottom = 363.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.603922, 0.117647, 0, 1)
theme_override_fonts/font = ExtResource("3_17xf0")
theme_override_font_sizes/font_size = 25
text = "AGree"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_71haw")
volume_db = 8.0
autoplay = true
bus = &"LowPass"

[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Settings/VBoxContainer/VBoxContainer/AudioSlider" to="." method="_on_audio_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Settings/VBoxContainer/SettingsBackButton" to="." method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Instructions/Panel/StartButton" to="." method="_on_start_button_pressed"]
